# PRESAGe

./: .gitignore  README.md
analysis/: README.md  common.hpp  config.json  ieee754.jl
analysis/Vitis/: CMakeLists.txt  env.sh
analysis/Vitis/configs/: additive.cfg  approximations.cfg  approximations_double.cfg  approximations_single.cfg  arcus_hyperbolic.cfg  arcus_trigonometric.cfg  arcus_trigonometric_pi.cfg  erf_approximations.cfg  erfc_approximations.cfg  exponential.cfg  hyperbolic.cfg  logarithmic.cfg  multiplicative.cfg  power.cfg  special.cfg  trigonometric.cfg  trigonometric_approximations.cfg  trigonometric_pi.cfg
analysis/Vitis/eval/: collect_estimations.jl  collect_local_mem.jl  collect_overview.jl  collect_resources.jl
analysis/Vitis/hls/: Erf.hpp  binary.cpp.in  binary.hpp  unitary.cpp.in  unitary.hpp
analysis/Vitis/host/: Kernel.hpp  main.cpp
analysis/Vitis/scripts/: approximations_emu.sh  for_all.sh  local_mem_reports.sh  run.sh  run_approximations.sh  run_approximations_emu.sh  synth.sh  synth_approximations.sh
analysis/eval/: deviations.jl  freq.jl  golden.jl  max_deviations.jl  max_deviations_summary.jl  special.jl  stats.jl
analysis/oneAPI/: CMakeLists.txt  env.sh
analysis/oneAPI/device/: Erf.hpp  binary.cpp.in  binary.hpp  unitary.cpp.in  unitary.hpp
analysis/oneAPI/eval/: collect_estimations.jl  collect_local_mem.jl  collect_overview.jl  collect_resources.jl
analysis/oneAPI/host/: main.cpp
analysis/oneAPI/scripts/: approximations_emu.sh  for_all.sh  local_mem_reports.sh  run.sh  run_approximations.sh  run_approximations_emu.sh  synth.sh  synth_approximations.sh
analysis/plot/: approximation_resources.jl  approximation_resources_model.jl  approximation_resources_usage.jl  estimations.jl  linear.jl  local_mem.jl  oneapi_erf_deviation.jl  vitis_cbrt_half.jl  vitis_timings.jl
analysis/scripts/: collect_plots.sh  eval_all_deviations.sh  eval_all_max_deviations.sh  eval_approximation_deviations.sh  eval_approximation_max_deviations.sh  golden_all.sh  plot_all_approximation_deviations.sh  plot_all_deviations_linear.sh  plot_all_outputs_linear.sh  run.sh
generator/: Approximation.hpp  CMakeLists.txt  Generator.hpp  README.md  ResourceEstimation.hpp  Rewriter.hpp  env.sh  float_utils.hpp  main.cpp  types.hpp
